--- a/Yapbam/src/Resources.properties
+++ b/Yapbam/src/Resources.properties
@@ -322,5 +322,18 @@ PeriodicalTransactionManager.delete.toolTip=deletes the selected periodical tran
 PeriodicalTransactionManager.edit.toolTip=Edits the selected periodical transaction
 PeriodicalTransactionManager.duplicate.toolTip=Duplicates the selected periodical transaction and edits this new created transaction
 
+AccountManager.balanceColumn.title=Initial balance
+AccountManager.balanceColumn.toolTip=Double click this cell to edit the account's initial balance (The 'enter' key will validate your changes)
+AccountManager.deleteAccount.toolTip=This button deletes the selected account
+AccountManager.deleteMessage.confirm=Do you still want to delete that account ?
+AccountManager.deleteMessage.more=Deleting this account implies to delete its {0,number,integer} transactions.
+AccountManager.deleteMessage.one=Deleting this account implies to delete the only transaction it contains
+AccountManager.deleteMessage.title=Non empty account deletion
+AccountManager.nameColumn.toolTip=Double click this cell to edit the account's name (The 'enter' key will validate your changes)
+AccountManager.title=Accounts management
+AccountManager.toolTip=This tab allows you to manage your accounts
+AccountManager.transactionsNumber.title=Transactions number
+AccountManager.transactionsNumber.toolTip=This cell contains the number of transactions under the account
+
 AdministrationPlugIn.title=Administration
 AdministrationPlugIn.toolTip=Add, suppress or edit accounts, categories or periodical transaction with this panel
