--- a/Yapbam/.classpath
+++ b/Yapbam/.classpath
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
 	<classpathentry kind="src" path="src"/>
+	<classpathentry kind="src" path="srcTests"/>
 	<classpathentry kind="src" path="testSrc"/>
 	<classpathentry kind="src" path="srcLauncher"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
