--- a/Yapbam/src/Resources.properties
+++ b/Yapbam/src/Resources.properties
@@ -335,5 +335,13 @@ AccountManager.toolTip=This tab allows you to manage your accounts
 AccountManager.transactionsNumber.title=Transactions number
 AccountManager.transactionsNumber.toolTip=This cell contains the number of transactions under the account
 
+CategoryManager.new.toolTip=Creates a new category
+CategoryManager.title=Categories management
+CategoryManager.toolTip=This tab allows you to manage categories
+CategoryManager.delete.toolTip=Deletes the selected category
+CategoryManager.deleteMessage.head=The transactions under the deleted category will be transfered to the "undefined" category
+CategoryManager.deleteMessage.confirm=Do you still want to delete that category ?
+CategoryManager.deleteMessage.title=Used category deletion
+
 AdministrationPlugIn.title=Administration
 AdministrationPlugIn.toolTip=Add, suppress or edit accounts, categories or periodical transaction with this panel
