--- a/Yapbam/src/Resources.properties
+++ b/Yapbam/src/Resources.properties
@@ -342,6 +342,10 @@ CategoryManager.delete.toolTip=Deletes the selected category
 CategoryManager.deleteMessage.head=The transactions under the deleted category will be transfered to the "undefined" category
 CategoryManager.deleteMessage.confirm=Do you still want to delete that category ?
 CategoryManager.deleteMessage.title=Used category deletion
+CategoryManager.error.message.alreadyUsed=Impossible to rename this category, the "{0}" category already exists 
+CategoryManager.error.message.empty=A category can't have an empty name
+CategoryManager.error.title=Invalid category name
+CategoryManager.nameColumn.toolTip=Double click this cell to edit the category's name (The 'enter' key will validate your changes)
 
 AdministrationPlugIn.title=Administration
 AdministrationPlugIn.toolTip=Add, suppress or edit accounts, categories or periodical transaction with this panel
