--- a/Yapbam/src/Resources.properties
+++ b/Yapbam/src/Resources.properties
@@ -334,6 +334,9 @@ AccountManager.title=Accounts management
 AccountManager.toolTip=This tab allows you to manage your accounts
 AccountManager.transactionsNumber.title=Transactions number
 AccountManager.transactionsNumber.toolTip=This cell contains the number of transactions under the account
+AccountManager.error.message.alreadyUsed=Impossible to rename this account, the "{0}" account already exists 
+AccountManager.error.message.empty=An account can't have an empty name
+AccountManager.error.title=Invalid account name
 
 CategoryManager.new.toolTip=Creates a new category
 CategoryManager.title=Categories management
