--- a/src/Resources.properties
+++ b/src/Resources.properties
@@ -101,6 +101,8 @@ MainMenu.About.ToolTip=Shows the information about this program (author, version
 MainMenu.CheckUpdate=Check for updates
 MainMenu.MainMenu.CheckUpdate.ToolTip=Checks for updates over the Internet
 MainMenu.CheckUpdate.Error.title=Unable to check for updates
+MainMenu.CheckUpdate.FirstRun.title=Check for update
+MainMenu.CheckUpdate.FirstRun.message=<HTML>Welcome to Yapbam \!<BR><BR>Yapbam can connect to the Internet to check if a new version is available.<BR>Would you like Yapbam to perform this check at startup ?<BR><BR>This setting can be modified in the preferences dialog (in the file menu)</html>
 MainMenu.CheckUpdate.HttpError=<HTML><BODY>Communication problem with update server : <B>HttpError {0,number}</B><BR><BR>This server is probably temporarily down.<BR><BR>Please retry later, if it not succeed, have a look at <a href="{1}">{1}</a></BODY></HTML>
 MainMenu.CheckUpdate.IOError=<HTML><BODY>Communication problem with update server : <B>{0}</B><BR><BR>Please check your Internet connection or review Yapbam's network settings.<BR><BR>If you still have problem, please have a look at <a href="{1}">{1}</a></BODY></HTML>
 MainMenu.CheckUpdate.Success.Header=<HTML><BODY>A new <B>Yapbam</B> release is available.</BODY></HTML>
@@ -192,6 +194,8 @@ GenericButton.new=New
 GenericButton.edit=Edit
 GenericButton.delete=Delete
 GenericButton.duplicate=Duplicate
+GenericButton.yes=Yes
+GenericButton.no=No
 
 Transaction.0=S/T
 Transaction.account=Account
