--- a/src/Resources.properties
+++ b/src/Resources.properties
@@ -354,5 +354,9 @@ CategoryManager.error.message.empty=A category can't have an empty name
 CategoryManager.error.title=Invalid category name
 CategoryManager.nameColumn.toolTip=Double click this cell to edit the category's name (The 'enter' key will validate your changes)
 
+ModeManager.deleteMessage.head=The transactions that used the deleted mode will be changed to the "undefined" mode 
+ModeManager.deleteMessage.confirm=Do you still want to delete that mode ?
+ModeManager.deleteMessage.title=Used mode deletion
+
 AdministrationPlugIn.title=Administration
 AdministrationPlugIn.toolTip=Add, suppress or edit accounts, categories or periodical transaction with this panel
