--- a/src/Resources.properties
+++ b/src/Resources.properties
@@ -360,3 +360,8 @@ ModeManager.deleteMessage.title=Used mode deletion
 
 AdministrationPlugIn.title=Administration
 AdministrationPlugIn.toolTip=Add, suppress or edit accounts, categories or periodical transaction with this panel
+
+StatisticsPlugin.byCategory.empty=No category has more expenses than receipts
+StatisticsPlugin.byCategory.title=Expenses by category
+StatisticsPlugin.title=Statistics
+StatisticsPlugin.tooltip=This tab displays some statistics about your accounts
