--- a/build.xml
+++ b/build.xml
@@ -1,5 +1,13 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
 <project default="build" name="Create Runnable Jar for Yapbam project">
+	<!--======================================  README ================================================>
+	| if you want to run this build file, you have to set the following jcommonpath and jfreechartpath |
+	| properties. They have to reference the jfreeChart sources and the JCommon sources.               |
+	| These sources are available at http://www.jfree.org                                              |
+	<================================================================================================-->
+	<property name="jcommonpath" value="C:/Users/Jean-Marc/workspace/jcommon-1.0.16/sourceJCommon"/>
+	<property name="jfreechartpath" value="C:/Users/Jean-Marc/workspace/jfreechart/source"/>
+	
 	<property name="yapbamVersion" value="0.3.0"/>
 	<tstamp><format property="TODAY" pattern="dd/MM/yyyy" locale="fr,FR"/></tstamp>
 	
@@ -9,9 +17,13 @@
 		<mkdir dir="releaseCompile"/>
 		<copy todir="releaseCompile">
 	    	<fileset dir="src" excludes="**/*.java"/>
+	    	<fileset dir="${jfreechartpath}" includes="/org/jfree/chart/plot/LocalizationBundl*.properties"/>
+	    	<fileset dir="${jfreechartpath}" includes="/org/jfree/chart/LocalizationBundl*.properties"/>
 		</copy>
-		<javac srcdir="src" destdir="releaseCompile" target="1.6" encoding="ISO8859-1" classpath="jfree.jar"/>
-		<javac srcdir="srcLauncher" destdir="releaseCompile" target="1.3" encoding="ISO8859-1"/>
+		<javac srcdir="${jfreechartpath}" includes="/org/jfree/chart/resources/**/*.java" destdir="releaseCompile" target="1.6" encoding="ISO8859-1"/>
+		<javac srcdir="${jcommonpath}" includes="/org/jfree/resources/**/*.java" destdir="releaseCompile" target="1.6" encoding="ISO8859-1"/>
+		<javac srcdir="src" destdir="releaseCompile" target="1.6" encoding="ISO8859-1" sourcepath="${jfreechartpath};${jcommonpath}" debug="true"/>
+		<javac srcdir="srcLauncher" destdir="releaseCompile" target="1.3" encoding="ISO8859-1" />
 		<jar destfile="yapbam.jar">
 			<manifest>
 				<attribute name="Main-Class" value="net.yapbam.gui.Launcher"/>
