--- a/Yapbam/.classpath
+++ b/Yapbam/.classpath
@@ -6,5 +6,7 @@
 	<classpathentry kind="src" path="srcLauncher"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.junit.JUNIT_CONTAINER/4"/>
+	<classpathentry kind="var" path="JCommon"/>
+	<classpathentry kind="var" path="JFreeChart"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
