--- a/src/Resources.properties
+++ b/src/Resources.properties
@@ -361,7 +361,15 @@ ModeManager.deleteMessage.title=Used mode deletion
 AdministrationPlugIn.title=Administration
 AdministrationPlugIn.toolTip=Add, suppress or edit accounts, categories or periodical transaction with this panel
 
-StatisticsPlugin.byCategory.empty=No category has more expenses than receipts
-StatisticsPlugin.byCategory.title=Expenses by category
+StatisticsPlugin.bar.debts=Debts
+StatisticsPlugin.bar.empty=No transactions are available through the current filter
+StatisticsPlugin.bar.receipt=Receipts
+StatisticsPlugin.bar.tabname=Receipts/debts
+StatisticsPlugin.bar.title=Receipts and debts par categories
+StatisticsPlugin.bar.tooltip=This chart presents the debts and receipt amount per category
+StatisticsPlugin.pie.tabname=Net expenses
+StatisticsPlugin.pie.tooltip=This char presents the net expenses (debts - receipts) distribution per category
+StatisticsPlugin.pie.byCategory.empty=No category has more expenses than receipts
+StatisticsPlugin.pie.byCategory.title=Expenses by category
 StatisticsPlugin.title=Statistics
 StatisticsPlugin.tooltip=This tab displays some statistics about your accounts
