--- a/Yapbam/build.xml
+++ b/Yapbam/build.xml
@@ -8,7 +8,7 @@
 	<property name="jcommonpath" value="C:/Users/Jean-Marc/workspace/jcommon-1.0.16/sourceJCommon"/>
 	<property name="jfreechartpath" value="C:/Users/Jean-Marc/workspace/jfreechart/source"/>
 	
-	<property name="yapbamVersion" value="0.3.1"/>
+	<property name="yapbamVersion" value="0.3.2"/>
 	<tstamp><format property="TODAY" pattern="dd/MM/yyyy" locale="fr,FR"/></tstamp>
 	
 	<target name="build">
@@ -36,6 +36,7 @@
 		<mkdir dir="${releaseDir}"/>
 		<copy todir="${releaseDir}" flatten="true">
 	    	<fileset dir="src/localization" includes="*.html"/>
+	    	<fileset dir="." includes="*Sample*.xml"/>
 			<resources>
 		          <file file="yapbam.jar"/>
 			</resources>
