--- a/Yapbam/src/Resources.properties
+++ b/Yapbam/src/Resources.properties
@@ -321,6 +321,7 @@ PeriodicalTransactionManager.nextDate.column=Next
 PeriodicalTransactionManager.period.column=Every
 PeriodicalTransactionManager.period.daily.content={0,number} days
 PeriodicalTransactionManager.period.monthly.content={0,number} month the {1,number}
+PeriodicalTransactionManager.period.until={0} until {1,date,short}
 PeriodicalTransactionManager.new.toolTip=Creates a new periodical transaction
 PeriodicalTransactionManager.delete.toolTip=deletes the selected periodical transaction
 PeriodicalTransactionManager.edit.toolTip=Edits the selected periodical transaction
