--- a/src/Resources.properties
+++ b/src/Resources.properties
@@ -308,6 +308,8 @@ PeriodicalTransactionDialog.nextDate.toolTip=Enter the next transaction date her
 PeriodicalTransactionDialog.period=Then every
 PeriodicalTransactionDialog.step.toolTip=Enter the interval between two transactions here
 PeriodicalTransactionDialog.the=the
+PeriodicalTransactionDialog.until=until
+PeriodicalTransactionDialog.lastDate.toolTip=Enter the end date of this periodical transaction here (blank if no end is forecasted)
 PeriodicalTransactionDialog.title.new=New periodical transaction
 PeriodicalTransactionDialog.title.edit=Edit periodical transaction
 PeriodicalTransactionDialog.error.dateStepper=The generation period is not well documented
