--- a/src/Resources.properties
+++ b/src/Resources.properties
@@ -375,3 +375,33 @@ StatisticsPlugin.pie.byCategory.empty=No category has more expenses than receipt
 StatisticsPlugin.pie.byCategory.title=Category-wise expenses
 StatisticsPlugin.title=Statistics
 StatisticsPlugin.tooltip=This tab displays some statistics about your accounts
+
+HelpManager.errorDialog.message=Error {0} opening help
+HelpManager.errorDialog.title=Unable to display help
+
+CustomFilterPanel.account.toolTip=Select granted accounts
+CustomFilterPanel.category.toolTip=Select granted categories
+CustomFilterPanel.amount.all=All
+CustomFilterPanel.amount.all.toolTip=Clears filter on transaction's amount
+CustomFilterPanel.amount.equals=Equals to
+CustomFilterPanel.amount.equals.toolTip=Selects transactions with amount equals to following field
+CustomFilterPanel.amout.between=Between
+CustomFilterPanel.amout.between.toolTip=Selects transactions with amount between the following fields
+CustomFilterPanel.amount.maximum=Maximum amount
+CustomFilterPanel.amount.to=and
+CustomFilterPanel.amout.minimum=Minimum amount
+
+CustomFilterPanel.error.amountMaximum=The maximum amount is invalid
+CustomFilterPanel.error.amountMimimum=The minimum amount is invalid
+CustomFilterPanel.error.amountFromHigherThanTo=The minimum amount is higher than the maximum
+CustomFilterPanel.error.dateFrom=The last date is invalid
+CustomFilterPanel.error.date.to=The first date is invalid
+CustomFilterPanel.error.dateFromHigherThanTo=The first date is after the last one
+CustomFilterPanel.error.valueDateFrom=The first value date is invalid
+CustomFilterPanel.error.valueDateTo=The last value date is invalid
+CustomFilterPanel.error.valueDateFromHigherThanTo=The first value date is after the last one
+CustomFilterPanel.error.noAccount=Please select one or more account
+CustomFilterPanel.error.noCategory=Please select one or more category
+CustomFilterPanel.error.noMode=Please select one or more mode
+
+CustomFilterPanel.regexprHelp.toolTip=Cliquez ici pour obtenir de l'aide sur les expressions r\u00E9guli\u00E8res
