--- a/Yapbam/src/Resources.properties
+++ b/Yapbam/src/Resources.properties
@@ -379,8 +379,22 @@ StatisticsPlugin.tooltip=This tab displays some statistics about your accounts
 HelpManager.errorDialog.message=Error {0} opening help
 HelpManager.errorDialog.title=Unable to display help
 
-CustomFilterPanel.account.toolTip=Select granted accounts
-CustomFilterPanel.category.toolTip=Select granted categories
+CustomFilterPanel.account.toolTip=Select valid accounts
+CustomFilterPanel.category.toolTip=Select valid categories
+CustomFilterPanel.mode.toolTip=Select valid payment modes
+
+CustomFilterPanel.description.toolTip=Text to compare with transaction's description
+CustomFilterPanel.description.contains=Contains
+CustomFilterPanel.description.contains.toolTip=Select to keep transactions with a description that contains the following field
+CustomFilterPanel.description.equals=Equals to
+CustomFilterPanel.description.equals.toolTip=Select to keep transactions with a description equals to the following field
+CustomFilterPanel.description.ignoreCase=Ignore case
+CustomFilterPanel.description.ignoreCase.toolTip=Check this box to ignore uppercase/lowercase differences
+CustomFilterPanel.description.ignoreDiacriticals=Ignore diacritical marks
+CustomFilterPanel.description.ignoreDiacriticals.toolTip=Check this box to ignore diacritical marks during comparison
+CustomFilterPanel.description.regularExpression=Regular expression
+CustomFilterPanel.description.regularExpression.toolTip=Select to compare transactions description with the following regular expression
+
 CustomFilterPanel.amount.all=All
 CustomFilterPanel.amount.all.toolTip=Clears filter on transaction's amount
 CustomFilterPanel.amount.equals=Equals to
@@ -391,8 +405,26 @@ CustomFilterPanel.amount.maximum=Maximum amount
 CustomFilterPanel.amount.to=and
 CustomFilterPanel.amout.minimum=Minimum amount
 
-CustomFilterPanel.error.amountMaximum=The maximum amount is invalid
+CustomFilterPanel.date.all=All
+CustomFilterPanel.date.all.toolTip=Select this to clear transaction date filter
+CustomFilterPanel.date.equals=Equals to
+CustomFilterPanel.date.equals.toolTip=Select this to keep transactions with date equals to the following
+CustomFilterPanel.date.between=Between
+CustomFilterPanel.date.between.toolTip=Select this to keep transactions with date between the following dates
+CustomFilterPanel.date.from.toolTip=First valid date
+CustomFilterPanel.date.to.toolTip=Last valid date
+
+CustomFilterPanel.valueDate.all=All
+CustomFilterPanel.valueDate.all.toolTip=Select this to clear transaction value date filter
+CustomFilterPanel.valueDate.between=Between
+CustomFilterPanel.valueDate.between.toolTip=Select this to keep transactions with value date between the following dates
+CustomFilterPanel.valueDate.equals=Equals to
+CustomFilterPanel.valueDate.equals.toolTip=Select this to keep transactions with value date equals to the following
+CustomFilterPanel.valueDate.from.toolTip=First valid value date
+CustomFilterPanel.valueDate.to.toolTip=Last valid value date
+
 CustomFilterPanel.error.amountMimimum=The minimum amount is invalid
+CustomFilterPanel.error.amountMaximum=The maximum amount is invalid
 CustomFilterPanel.error.amountFromHigherThanTo=The minimum amount is higher than the maximum
 CustomFilterPanel.error.dateFrom=The last date is invalid
 CustomFilterPanel.error.date.to=The first date is invalid
@@ -404,4 +436,4 @@ CustomFilterPanel.error.noAccount=Please select one or more account
 CustomFilterPanel.error.noCategory=Please select one or more category
 CustomFilterPanel.error.noMode=Please select one or more mode
 
-CustomFilterPanel.regexprHelp.toolTip=Cliquez ici pour obtenir de l'aide sur les expressions r\u00E9guli\u00E8res
+CustomFilterPanel.regexprHelp.toolTip=Click this to get help on regular expressions
