--- a/Yapbam/src/Resources.properties
+++ b/Yapbam/src/Resources.properties
@@ -393,7 +393,7 @@ CustomFilterPanel.description.ignoreCase.toolTip=Check this box to ignore upperc
 CustomFilterPanel.description.ignoreDiacriticals=Ignore diacritical marks
 CustomFilterPanel.description.ignoreDiacriticals.toolTip=Check this box to ignore diacritical marks during comparison
 CustomFilterPanel.description.regularExpression=Regular expression
-CustomFilterPanel.description.regularExpression.toolTip=Select to compare transactions description with the following regular expression
+CustomFilterPanel.description.regularExpression.toolTip=Select to keep transactions with a description that matches the following regular expression
 
 CustomFilterPanel.amount.all=All
 CustomFilterPanel.amount.all.toolTip=Clears filter on transaction's amount
@@ -412,6 +412,7 @@ CustomFilterPanel.date.equals.toolTip=Select this to keep transactions with date
 CustomFilterPanel.date.between=Between
 CustomFilterPanel.date.between.toolTip=Select this to keep transactions with date between the following dates
 CustomFilterPanel.date.from.toolTip=First valid date
+CustomFilterPanel.date.to=and
 CustomFilterPanel.date.to.toolTip=Last valid date
 
 CustomFilterPanel.valueDate.all=All
@@ -421,7 +422,23 @@ CustomFilterPanel.valueDate.between.toolTip=Select this to keep transactions wit
 CustomFilterPanel.valueDate.equals=Equals to
 CustomFilterPanel.valueDate.equals.toolTip=Select this to keep transactions with value date equals to the following
 CustomFilterPanel.valueDate.from.toolTip=First valid value date
+CustomFilterPanel.valueDate.to=and
 CustomFilterPanel.valueDate.to.toolTip=Last valid value date
+
+CustomFilterPanel.check=Checking
+CustomFilterPanel.checked.toolTip=Unselect to avoid checked transactions
+CustomFilterPanel.unchecked.toolTip=Unselect to avoid unchecked transactions
+CustomFilterPanel.statement.contains=Contains
+CustomFilterPanel.statement.contains.toolTip=Select to keep transactions with statement ID that contains the following field
+CustomFilterPanel.statement.equals=Equals to
+CustomFilterPanel.statement.equals.toolTip=Select to keep transactions with statement equals to the following field
+CustomFilterPanel.statement.regularExpression=Regular expression
+CustomFilterPanel.statement.regularExpression.toolTip=Select to keep transactions with statement that matches the following regular expression
+CustomFilterPanel.statement.toolTip=Text to compare to transaction's statement
+
+CustomFilterPanel.clearAll=Clear all filters
+CustomFilterPanel.clearAll.toolTip=Clears all filters
+CustomFilterPanel.regexprHelp.toolTip=Click this to get help on regular expressions
 
 CustomFilterPanel.error.amountMimimum=The minimum amount is invalid
 CustomFilterPanel.error.amountMaximum=The maximum amount is invalid
@@ -435,5 +452,3 @@ CustomFilterPanel.error.valueDateFromHigherThanTo=The first value date is after 
 CustomFilterPanel.error.noAccount=Please select one or more account
 CustomFilterPanel.error.noCategory=Please select one or more category
 CustomFilterPanel.error.noMode=Please select one or more mode
-
-CustomFilterPanel.regexprHelp.toolTip=Click this to get help on regular expressions
