--- a/src/Resources.properties
+++ b/src/Resources.properties
@@ -425,6 +425,14 @@ CustomFilterPanel.valueDate.from.toolTip=First valid value date
 CustomFilterPanel.valueDate.to=and
 CustomFilterPanel.valueDate.to.toolTip=Last valid value date
 
+CustomFilterPanel.number.contains=Contains
+CustomFilterPanel.number.contains.toolTip=Select to keep transactions with number that contains the following field
+CustomFilterPanel.number.equals=Equals to
+CustomFilterPanel.number.equals.toolTip=Select to keep transactions with number equals to the following field
+CustomFilterPanel.number.regularExpression=Regular expression
+CustomFilterPanel.number.regularExpression.toolTip=Select to keep transactions with number that matches the following regular expression
+CustomFilterPanel.number.toolTip=Text to compare to transaction's number
+
 CustomFilterPanel.check=Checking
 CustomFilterPanel.checked.toolTip=Unselect to avoid checked transactions
 CustomFilterPanel.unchecked.toolTip=Unselect to avoid unchecked transactions
