--- a/Yapbam/src/Resources.properties
+++ b/Yapbam/src/Resources.properties
@@ -89,6 +89,15 @@ MainMenuBar.customizedFilter=Customized filter
 MainMenuBar.Receipts=Receipts
 MainMenuBar.Expenses=Expenses
 MainMenuBar.NoFilter=No filter
+MainMenuBar.checked.toolTip=Selects checked transactions
+MainMenuBar.notChecked.toolTip=Selects unchecked transactions
+MainMenuBar.customizedFilter.toolTip=Opens the customized filter dialog
+MainMenuBar.Receipts.toolTip=Selects receipts
+MainMenuBar.Expenses.toolTip=Selects expenses
+MainMenuBar.AccountFilter.toolTip=Selects transactions of {0} account
+MainMenuBar.NoAccountFilter.toolTip=Clears account filter
+MainMenuBar.NoCheckedFilter.toolTip=Clears checked/unchecked filter
+MainMenuBar.NoAmountFilter.toolTip=Clears the expense/receipt filter
 
 MainMenu.QuestionMark=?
 MainMenu.QuestionMark.Mnemonic=?
