--- a/src/Resources.properties
+++ b/src/Resources.properties
@@ -125,10 +125,10 @@ BalanceHistory.toolTip=Day-to-day balance chart
 BalanceHistory.balance=Balance of {0}: {1}
 BalanceHistory.showGrid=Show grid
 
-AboutDialog.Content=<html>Author: <b>{0}</b><br>Version: <b>{1}</b></html>
 AboutDialog.Content=<html>Copyright &copy; 2009 <b>{0}</b> - All rights reserved<br>Version: <b>{1}</b></html>
 AboutDialog.License.TabName=License
 AboutDialog.RelNotes.TabName=Release notes
+AboutDialog.Contributors.TabName=Contributors
 
 AccountDialog.title.new=New account
 AccountDialog.title.edit=Edit account
@@ -226,19 +226,26 @@ TransactionDialog.bad.amount=Disabled because the transaction amount is invalid
 TransactionDialog.bad.date=Disabled because the transaction date is invalid
 TransactionDialog.bad.valueDate=Disabled because the transaction value date is invalid
 TransactionDialog.category=Category:
+TransactionDialog.category.tooltip=Select the category
 TransactionDialog.category.new.tooltip=Click to create a new category
 TransactionDialog.date=Transaction date:
+TransactionDialog.date.tooltip=Entrez ici la date de l'op\u00E9ration
 TransactionDialog.description=Description:
+TransactionDialog.description.tooltip=Enter the transaction description
 TransactionDialog.mode=Payment mode:
 TransactionDialog.mode.new.tooltip=Click to create a new payment mode
 TransactionDialog.mode.tooltip=Select the payment mode 
 TransactionDialog.needAccount=Create at least one account before creating a  transaction
 TransactionDialog.number=Number:
+TransactionDialog.number.tooltip=Enter, if any, the transaction number
 TransactionDialog.receipt=Receipt
+TransactionDialog.receipt.tooltip=Check this if transaction is a receipt
 TransactionDialog.statement=Statement:
+TransactionDialog.statement.tooltip=Enter the statement ID. Leave blank if transaction is not already checked
 TransactionDialog.title.new=New transaction
 TransactionDialog.title.edit=Edit transaction
 TransactionDialog.valueDate=Value date:
+TransactionDialog.valueDate.tooltip=Enter the transaction value date
 TransactionDialog.SubPanel.add=Add to transaction
 TransactionDialog.SubPanel.add.tooltip=Check this box to automatically update the overall transaction amount
 TransactionDialog.SubPanel.delete=Delete
