--- a/Yapbam/src/Resources.properties
+++ b/Yapbam/src/Resources.properties
@@ -253,6 +253,7 @@ TransactionDialog.SubPanel.modify=Edit
 TransactionDialog.SubPanel.new=New Subtransaction
 TransactionDialog.SubPanel.title=Subtransactions
 TransactionDialog.SubPanel.total=Subtransactions total: {0,number,currency}
+SubTransactionDialog.amount.tooltip=Enter the subtransaction amount
 SubTransactionDialog.empty.amount=Disabled because the amount is blank
 SubTransactionDialog.empty.desciption=Disabled because the subtransaction description is blank
 SubTransactionDialog.null.amount=Disabled because the amount is null
@@ -265,9 +266,12 @@ Category.undefined=Undefined
 Mode.undefined=Undefined
 
 PreferencesDialog.title=Preferences
+PreferencesDialog.translatorMode=Translator mode
+PreferencesDialog.translatorMode.tooltip=Select this to display translation file keys instead of wordings
 PreferencesDialog.Localization.title=Localization
 PreferencesDialog.Localization.toolTip=This tab allows you to configure the language and the country (which sets the currency used)
 PreferencesDialog.Localization.country=Country
+PreferencesDialog.Localization.countryList.tooltip=Choose a country in this list
 PreferencesDialog.Localization.customCountry=Custom
 PreferencesDialog.Localization.customCountry.tooTip=Click on this or select the country from the following list to choose a country different from your system's default country
 PreferencesDialog.Localization.defaultCountry=Default ({0})
