--- a/Yapbam/src/Resources.properties
+++ b/Yapbam/src/Resources.properties
@@ -249,8 +249,11 @@ TransactionDialog.valueDate.tooltip=Enter the transaction value date
 TransactionDialog.SubPanel.add=Add to transaction
 TransactionDialog.SubPanel.add.tooltip=Check this box to automatically update the overall transaction amount
 TransactionDialog.SubPanel.delete=Delete
+TransactionDialog.SubPanel.delete.tooltip=Deletes the selected subtransaction
 TransactionDialog.SubPanel.modify=Edit
+TransactionDialog.SubPanel.modify.tooltip=Edits the selected subtransaction
 TransactionDialog.SubPanel.new=New Subtransaction
+TransactionDialog.SubPanel.new.tooltip=Creates a new subtransaction
 TransactionDialog.SubPanel.title=Subtransactions
 TransactionDialog.SubPanel.total=Subtransactions total: {0,number,currency}
 SubTransactionDialog.amount.tooltip=Enter the subtransaction amount
