--- a/src/Resources.properties
+++ b/src/Resources.properties
@@ -123,7 +123,10 @@ MainMenu.CheckUpdate.NoUpdate=Yapbam is up to date
 BalanceHistory.title=Balance history
 BalanceHistory.toolTip=Day-to-day balance chart
 BalanceHistory.balance=Balance of {0}: {1}
+BalanceHistory.chart.toolTip=Move the vertical bar to display another day's balance below
 BalanceHistory.showGrid=Show grid
+BalanceHistory.showGrid.toolTip=Check this box to display the grid
+BalanceHistory.report.toolTip=Click on the chart to change the day 
 
 AboutDialog.Content=<html>Copyright &copy; 2009 <b>{0}</b> - All rights reserved<br>Version: <b>{1}</b></html>
 AboutDialog.License.TabName=License
