--- a/Yapbam/src/Resources.properties
+++ b/Yapbam/src/Resources.properties
@@ -323,6 +323,8 @@ PreferencesDialog.Network.proxy.tooltip=Select this if you connect to the Intern
 PreferencesDialog.Network.proxyField.tooltip=Enter the IP address or DNS name of the proxy
 PreferencesDialog.Network.user=User:
 PreferencesDialog.Network.user.toolTip=Enter the proxy user ID
+PreferencesDialog.Network.showPassword=Show password
+PreferencesDialog.Network.showPassword.toolTip=Check this box to show the password
 
 PeriodicalTransactionDialog.activated=Activated
 PeriodicalTransactionDialog.activated.toolTip=Uncheck to suspend the generation of this transaction
