--- a/src/Resources.properties
+++ b/src/Resources.properties
@@ -42,12 +42,13 @@ MainMenu.Quit.Mnemonic=Q
 MainMenu.Quit.Accelerator=Q
 MainMenu.Quit.ToolTip=Closes the application
 
-MainMenu.Accounts=Accounts
-MainMenu.Accounts.Mnemonic=A
-MainMenu.Accounts.ToolTip=Allows you to manage the accounts (creation, renaming, ...)
+#This menu has been removed
+#MainMenu.Accounts=Accounts
+#MainMenu.Accounts.Mnemonic=A
+#MainMenu.Accounts.ToolTip=Allows you to manage the accounts (creation, renaming, ...)
         
 MainMenu.Accounts.New=New account
-MainMenu.Accounts.New.Mnemonic=N
+MainMenu.Accounts.New.Mnemonic=A
 MainMenu.Accounts.New.ToolTip=Creates a new account
 
 MainMenu.Transactions=Transactions
