--- a/Yapbam/src/Resources.properties
+++ b/Yapbam/src/Resources.properties
@@ -87,12 +87,14 @@ MainMenuBar.Filter.Mnemonic=I
 MainMenuBar.checked=Checked transactions
 MainMenuBar.notChecked=Unchecked transactions
 MainMenuBar.customizedFilter=Customized filter
+MainMenuBar.customizedFilter.toolTip=Opens the customized filter dialog
+MainMenuBar.eraseFilters=Clear filters
+MainMenuBar.eraseFilters.toolTip=Clears all filters
 MainMenuBar.Receipts=Receipts
 MainMenuBar.Expenses=Expenses
 MainMenuBar.NoFilter=No filter
 MainMenuBar.checked.toolTip=Selects checked transactions
 MainMenuBar.notChecked.toolTip=Selects unchecked transactions
-MainMenuBar.customizedFilter.toolTip=Opens the customized filter dialog
 MainMenuBar.Receipts.toolTip=Selects receipts
 MainMenuBar.Expenses.toolTip=Selects expenses
 MainMenuBar.AccountFilter.toolTip=Selects transactions of {0} account
