--- a/Yapbam/build.xml
+++ b/Yapbam/build.xml
@@ -23,7 +23,7 @@
 		<javac srcdir="${jfreechartpath}" includes="/org/jfree/chart/resources/**/*.java" destdir="releaseCompile" target="1.6" encoding="ISO8859-1"/>
 		<javac srcdir="${jcommonpath}" includes="/org/jfree/resources/**/*.java" destdir="releaseCompile" target="1.6" encoding="ISO8859-1"/>
 		<javac srcdir="src" destdir="releaseCompile" target="1.6" encoding="ISO8859-1" sourcepath="${jfreechartpath};${jcommonpath}" debug="true"/>
-		<javac srcdir="srcLauncher" destdir="releaseCompile" target="1.3" encoding="ISO8859-1" />
+		<javac srcdir="srcLauncher" destdir="releaseCompile" target="1.3" source="1.3" encoding="ISO8859-1" />
 		<jar destfile="yapbam.jar">
 			<manifest>
 				<attribute name="Main-Class" value="net.yapbam.gui.Launcher"/>
@@ -41,6 +41,9 @@
 		        <file file="yapbam.jar"/>
 				<file file="yapbam.bat"/>
 			</resources>
+		</copy>
+		<copy todir="${releaseDir}/help" flatten="false">
+	    	<fileset dir="help" includes="**/*.html" />
 		</copy>
 		<zip basedir="${releaseDir}" destfile="yapbam-${yapbamVersion}.zip"/>
 		<delete dir="releaseCompile"/>
