--- a/Yapbam/src/Resources.properties
+++ b/Yapbam/src/Resources.properties
@@ -491,3 +491,12 @@ CustomFilterPanel.error.valueDateFromHigherThanTo=The first value date is after 
 CustomFilterPanel.error.noAccount=Please select one or more account
 CustomFilterPanel.error.noCategory=Please select one or more category
 CustomFilterPanel.error.noMode=Please select one or more mode
+
+BudgetPanel.title=Budget
+BudgetPanel.tooltip=Receipts and expenses distribution function of month/year and category
+BudgetPanel.export=Export
+BudgetPanel.export.toolTip=Exports this table to a text file
+BudgetPanel.perMonth=Per month
+BudgetPanel.perMonth.tooltip=Selects the monthly bugdet view
+BudgetPanel.perYear=Per year
+BudgetPanel.perYear.tooltip=Selects the yearly bugdet view
