--- a/Yapbam/src/Resources.properties
+++ b/Yapbam/src/Resources.properties
@@ -8,6 +8,14 @@ MainFrame.CurrentBalance.ToolTip=Current balance (transactions with value date a
 MainFrame.FinalBalance.ToolTip=Final balance (no transactions are ignored)
 MainFrame.Transactions=Transactions
 MainFrame.Transactions.toolTip=Displays the transaction table and tools to edit, duplicate, check ...
+MainFrame.Transactions.Preferences.balanceSummary.negativeSample=Negative balance: {0}
+MainFrame.Transactions.Preferences.balanceSummary.positiveSample=Positive balance: {0}
+MainFrame.Transactions.Preferences.balanceSummary.title=Balance summary
+MainFrame.Transactions.Preferences.changeColor=Change color
+MainFrame.Transactions.Preferences.changeColor.tooltip=Click this button to change the text color
+MainFrame.Transactions.Preferences.setDefault=Default settings
+MainFrame.Transactions.Preferences.setDefault.tooltip=Click this button to restore the default settings
+MainFrame.Transactions.Preferences.ChooseColorDialog.title=Choose a color
 MainFrame.Transactions.Preferences.title=Transactions view
 MainFrame.Transactions.Preferences.tooltip=This tab allows you to configure the transactions view appearance
 MainFrame.ReadLastError=Error in reading the last opened file {0}
