--- a/Yapbam/src/Resources.properties
+++ b/Yapbam/src/Resources.properties
@@ -518,7 +518,7 @@ BudgetPanel.tooltip=Receipts and expenses distribution function of month/year an
 BudgetPanel.export=Export
 BudgetPanel.export.toolTip=Exports this table to a text file
 BudgetPanel.filter=Filter
-BudgetPanel.filter.tooltip=Narrons the filter to current selection
+BudgetPanel.filter.tooltip=Narrows the filter to current selection
 BudgetPanel.perMonth=Per month
 BudgetPanel.perMonth.tooltip=Selects the monthly bugdet view
 BudgetPanel.perYear=Per year
